baml_language/crates/baml_tests/snapshots/diagnostic_errors/anyfunction/baml_tests__diagnostic_errors__anyfunction__10_formatter__bans.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
// BEP-062: baml.AnyFunction is a compiler builtin. It cannot be implemented
// by hand (E0153) and cannot be used as a generic bound (E0154) on
// functions, classes, impl generics, or associated types.

class MyTool {
    name: string,
}

implements baml.AnyFunction for MyTool {
}

function pick<T extends baml.AnyFunction>(f: T) -> T throws never {
    return f;
}

class Holder<T extends baml.AnyFunction> {
    f: T,
}

interface Registry {
    type Callee extends baml.AnyFunction
}
